i965/gen7: Add missing ! to brw->gs.prog_active assertion.

A typo in commit c173541d9769 accidentally removed the !.
It's supposed to assert that there is _not_ an active GS program.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=38762

Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>